--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
 	margin-left:auto;
 	display:block;
 }
-#logoimg img {height:58; class:left;}
+#logoimg img {height:58px;}
 
 #header
 {
@@ -26,7 +26,7 @@
   border-radius: 10px;
 }
 
-.dropdown img {height:30; width:30}
+.dropdown img {height:30; width:30;}
 
 .dropdown .dropbtn {
   font-size: 16px;
