--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
   /*width: 60;*/
   margin-right:auto;
   overflow: hidden;
-  border-radius: 10px;/
+  border-radius: 10px;
 }
 
 .dropdown img {height:30; width:30;}
