--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,37 @@
 
 #page
 {
-	
+	max-width: 800px;
+	margin: 20px auto;
+	margin-top: 90;
+	padding: 30px;
+	background-color: rgba(225,255,205,0);
+	overflow:hidden;
+	float:center;
+	text-align:center;
+}
+
+#page h1 {font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 72px;color: rgba(0,100,125,1)}
+
+#footer
+{
+	margin-bottom: -100;
+	margin-left: auto;
+	margin-right: auto;
+	background-color:rgba(200,240,255,0.8);
+	width:1000px;
+	height:210px;
+	overflow:hidden;
 }
 
 #logoimg
 {
-	float:left;
-	margin-left:auto;
-	display:block;
+	float:top-left;
+	margin-left:0;
+	display:inline;
+	overflow:hidden;
+	text-align:left;
+	width:300px;
 }
 #logoimg img {height:58px;}
 
@@ -21,8 +44,9 @@
 /* The dropdown container */
 .dropdown {
   float: right;
-  /*width: 60;*/
-  margin-right:auto;
+  width: 60;
+  display:inline;
+  margin-right:0;
   overflow: hidden;
   border-radius: 10px;
 }
@@ -35,7 +59,7 @@
   outline: none;
   color: rgba(255,255,255,1);
   padding: 14px 16px;
-  background-color: rgba(0,0,0,0.5);
+  background-color: rgba(0,0,0,0.1);
   font-family: inherit; /* Important for vertical align on mobile phones */
   margin: 0; /* Important for vertical align on mobile phones */
 }
@@ -49,6 +73,7 @@
 .dropdown-content {
   display: none;
   position: absolute;
+  right:5px;
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -62,7 +87,7 @@
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  text-align: left;
+  text-align: right;
 }
 
 /* Add a grey background color to dropdown links on hover */
