--- a/EiffelTower/styles.css
+++ b/EiffelTower/styles.css
@@ -65,3 +65,63 @@ img
 {
 	color: #333300;
 }
+
+
+/* The dropdown container */
+.dropdown {
+  float: right;
+  width: 60;
+  display:inline;
+  margin-right:0;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+.dropdown img {height:30; width:30;}
+
+.dropdown .dropbtn {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: rgba(255,255,255,1);
+  padding: 14px 16px;
+  background-color: rgba(0,0,0,0.1);
+  font-family: inherit; /* Important for vertical align on mobile phones */
+  margin: 0; /* Important for vertical align on mobile phones */
+}
+
+/* Add a red background color to navbar links on hover */
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: red;
+}
+
+/* Dropdown content (hidden by default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right:5px;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: right;
+}
+
+/* Add a grey background color to dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block	;
+}
