--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,18 @@
 	border-radius: 60px;
 }
 
+.projectbox h1
+{
+	font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 36px;color: rgba(255,255,255,1)
+}
+
+.projectboxfooter
+{
+    width:400px;
+	height:100px;
+	background-color:rgba(105,105,105,0.5);
+}
+
 #page h1 {font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 72px;color: rgba(0,100,125,1)}
 
 #displaypage
