--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@
 
 #displaypage h1 {font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 72px;color: rgba(0,100,125,1)}
 
-#footer
+.footer
 {
 	top: 70%;
 	bottom: 0%;
@@ -78,6 +78,16 @@
 	height:auto;
 	min-height:210px;
 	overflow:hidden;
+}
+
+#displaypage .footer
+{
+	top: 35%;
+	font-family: "Trebuchet MS", Helvetica, sans-serif; 
+	font-size: 24px;
+	color: rgba(0,0,0,1);
+	text-align: left;
+	padding:10px
 }
 
 #logoimg
