--- a/styles.css
+++ b/styles.css
@@ -2,51 +2,54 @@
 
 #page
 {
-	max-width: 800px;
-	margin: 20px auto;
-	margin-top: 90;
-	padding: 30px;
+	max-width: 70%;
+	margin: 5% auto;
+	margin-top: 5%;
+	padding: 1%;
 	background-color: rgba(225,255,205,0);
 	overflow:hidden;
 	text-align:center;
 }
 
-.leftcolumn{float:left; left:5%; position:absolute; display:inline;overflow:hidden;text-align:center;}
+.leftcolumn{top:10%;left:18%;margin-left:-11%;position:relative; display:inline-block;overflow:shown;text-align:center; width:22%;}
 .centrecolumn{
-            position: absolute; 
+            position: relative; 
+			width: 22%;
             /*top: 58%;*/ 
-            left: 43%; 
+            left: 40%; 
             /*margin-top: -100px;*/ 
-            margin-left: -100px; display:inline;overflow:hidden;text-align:center;}
-.rightcolumn{float:right;right:5%;position:absolute;display:inline;overflow:hidden;text-align:center;}
+            margin-left: -11%; display:inline-block;overflow:shown;text-align:center;}
+.rightcolumn{top:10%;left:62%;margin-left: -11%; position:relative;display:inline-block;overflow:shown;text-align:center; width:22%;}
 .projectbox
 {
-	width:400px;
-	height:600px;	
+	width:100%;
+	height:60%;	
 	background-color: rgba(205,205,225,1);
-	border-radius: 60px;
+	border-radius: 20%;
 	overflow:hidden;
 	border: double 10px white;
 }
 
 .projectbox img
 {
-    max-width: 400px;
-    height: auto;
+	width:100%;
+    height: 100%;
+	max-height:100%;
+	max-width:100%;
 }
 
 .projectbox h1
 {
-	font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 36px;color: rgba(255,255,255,1)
+	font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 100%;color: rgba(255,255,255,1)
 }
 
 .projectboxfooter
 {
-    width:400px;
-	height:100px;
-	position:absolute;
-	bottom:12px;
-	border-radius:60px;
+    width:100%;
+	height:20%;
+	position:relative;
+	bottom:20%;
+	border-radius:0%;
 	background-color:rgba(105,105,105,0.5);
 }
 
@@ -54,7 +57,8 @@
 
 #displaypage
 {
-	max-width: 800px;
+	width:auto;
+	max-width: 100%;
 	margin: 20px auto;
 	margin-top: 10;
 	padding: 30px;
@@ -75,9 +79,8 @@
 	left: 17%;
 	background-color:rgba(200,240,255,0.8);
 	width:1000px;
-	height:auto;
-	min-height:210px;
 	overflow:hidden;
+	height: 210px;
 }
 
 #displaypage .footer
@@ -88,6 +91,8 @@
 	color: rgba(0,0,0,1);
 	text-align: left;
 	padding:10px
+	height:auto;
+	min-height:210px;
 }
 
 #logoimg
@@ -103,7 +108,8 @@
 
 #header
 {
-	
+	width:auto;
+	max-width:100%;
 }
 
 /* The dropdown container */
