--- a/styles.css
+++ b/styles.css
@@ -80,7 +80,7 @@
 	background-color:rgba(200,240,255,0.8);
 	width:1000px;
 	overflow:hidden;
-	height: 210px;
+	height: 210px auto;
 }
 
 #displaypage .footer
